refactor: update project documentation to emphasize a modular architecture with language-specific installation tracks.